added enlarging on char

--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -305,6 +305,10 @@
     justify-content: flex-end;
 }
 
+.char:focus {
+    transform: scale(2.5);
+}
+
 /* #Char1 {
     background-image: url(/src/pictures/LvlChar/Char1.png);
 }
