--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -86,6 +86,7 @@
     margin-top: 1.2vw;
     margin-left: 1.2vw;
     margin-right: 1.2vw;
+    border-radius: 0.4vw;
     /* STAMP ANIMATION */
     position:relative;
     animation-name: pulse;
@@ -103,6 +104,7 @@
     margin-top: 1.2vw;
     margin-left: 1.2vw;
     margin-right: 1.2vw;
+    border-radius: 0.4vw;
     transition: all .3s ease;
     z-index: 2;
 }
@@ -153,6 +155,7 @@
     width: 11.5vw;
     margin: 1.2vw;
     background-size: cover;
+    border-radius: 0.4vw;
     /* STAMP ANIMATION */
     position:relative;
     animation-name: pulse;
@@ -168,6 +171,7 @@
     width: 11.5vw;
     margin: 1.2vw;
     background-size: cover;
+    border-radius: 0.4vw;
     transition: all .3s ease;    
 }
 
@@ -190,6 +194,7 @@
     margin: 1.2vw;
     justify-content: center;
     background-size: cover;
+    border-radius: 0.4vw;
     /* STAMP ANIMATION */
     position:relative;
     animation-name: pulse;
@@ -206,6 +211,7 @@
     margin: 1.2vw;
     justify-content: center;
     background-size: cover;
+    border-radius: 0.4vw;
     transition: all .3s ease;
 }
 
@@ -283,6 +289,7 @@
     margin-top: 1.2vw;
     justify-content: center;
     background-size: cover;
+    border-radius: 0.4vw;
 }
 
 #LvlEasy {
@@ -303,6 +310,7 @@
     background-size: cover;
     align-items: flex-start;
     justify-content: flex-end;
+    border-radius: 0.4vw;
 }
 
 .char:focus {
@@ -355,12 +363,27 @@
 
 /* BUTTONS  */
 
+.encounterCloseButton {
+    width: 1.5vw;
+    height: 1.5vw;
+    font-family: 'Birmingham'; 
+    font-size: 1vw;
+    text-align: center;
+    background-color: rgb(213, 213, 160);
+    cursor: pointer;
+    border: 1px solid #000000;
+    border-radius: 50%;
+    margin-top: 0.2vw;
+    margin-left: 14vw;
+}
+
 .encounterCardStamp {
     height: 11.5vw;
     width: 7.4vw;
     margin: 1.2vw;
     justify-content: center;
     background-size: cover;
+    border-radius: 0.4vw;
     /* STAMP ANIMATION */
     position:relative;
     animation-name: pulse;
@@ -375,6 +398,7 @@
     margin: 1.2vw;
     justify-content: center;
     background-size: cover;
+    border-radius: 0.4vw;
     transition: all .3s ease;
 }
 
@@ -382,9 +406,35 @@
     transform: scale(1.1);
 }
 
+.encounterCardFront {
+    display: flex;
+    height: 25vw;
+    width: 15.9vw;
+    justify-content: center;
+    background-size: cover;
+    border-radius: 0.4vw;
+}
+
 #America {
     background-image: url(/src/pictures/Encounter_Americas.png);
     animation-delay:4.1s;
+}
+
+.encounterAmericaFront0 {
+    height: 25vw;
+    width: 15.9vw;
+    justify-content: center;
+    background-size: cover;
+    border-radius: 0.4vw;
+    background-image: url(/src/pictures/EncounterCards/America/Encounter_Americas_Front_1.png);
+}
+
+#encounterAmericaFront1 {
+    background-image: url(/src/pictures/EncounterCards/America/Encounter_Americas_Front_1.png);
+}
+
+#encounterAmericaFront2 {
+    background-image: url(/src/pictures/EncounterCards/America/Encounter_Americas_Front_2.png);
 }
 
 #Europe {
