--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -361,6 +361,17 @@
     margin-right: 10vw;
 }
 
+.outerPopup {
+    position: fixed;
+    display: flex;
+    top:0;
+    left:0;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
 /* BUTTONS  */
 
 .encounterCloseButton {
@@ -420,20 +431,11 @@
     animation-delay:4.1s;
 }
 
-.encounterAmericaFront0 {
-    height: 25vw;
-    width: 15.9vw;
-    justify-content: center;
-    background-size: cover;
-    border-radius: 0.4vw;
+#AmericaFront1 {
     background-image: url(/src/pictures/EncounterCards/America/Encounter_Americas_Front_1.png);
 }
 
-#encounterAmericaFront1 {
-    background-image: url(/src/pictures/EncounterCards/America/Encounter_Americas_Front_1.png);
-}
-
-#encounterAmericaFront2 {
+#AmericaFront2 {
     background-image: url(/src/pictures/EncounterCards/America/Encounter_Americas_Front_2.png);
 }
 
