--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -7,7 +7,7 @@
 
 @font-face {
     font-family: Birmingham_Bold;
-    src: url(../Eldritch-font/BirminghamBold.ttf);
+    src: url(../Eldritch-font/BirminghamBold.otf);
 }
 
 @font-face {
@@ -145,9 +145,14 @@
     z-index: 1;
 }
 
+.lvlBackDiv {
+    display: flex;
+    justify-content: center;
+}
+
 .lvlDiv {
     display:flex;
-    margin-left:28vw;
+    margin-left: 28vw;
     margin-right: 28vw;
     height: 50vh;
     flex-direction: column;
@@ -178,6 +183,41 @@
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 }
+
+.defeatDiv {
+    height: 100vh;
+    width: 100vw;
+    background-image: url(/src/pictures/Main/Defeat_Cover.jpg);
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* FADE IN ANIMATION */
+    opacity: 0;
+    animation: fadeInAnimation ease 10s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.defeatPopup {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top:0;
+    left:0;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.defeatChoiceButtons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 
 /* PICTURES  */
 
@@ -221,7 +261,7 @@
     margin-bottom: 0.1vw;
 }
 
-.victoryText {
+.victoryDefeatText {
     font-family: 'Birmingham_Bold';
     font-size: 7vw;
     color: white;
@@ -232,6 +272,27 @@
     animation-delay: 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+}
+
+.defeatText {
+    font-family: 'Birmingham_Bold';
+    font-size: 7vw;
+    color: white;
+    justify-content: center;
+    margin-top: 10vw;
+         /* FADE IN ANIMATION */
+    opacity: 0;
+    animation: fadeInAnimation ease 7s;
+    animation-delay: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.defeatPopupText {
+    font-family: 'Birmingham_Bold';
+    font-size: 5vw;
+    color: white;
+    justify-content: center;
 }
 
 /* BUTTONS  */
@@ -290,6 +351,22 @@
     animation-delay: 7.5s;
 }
 
+.backLvlCharButton {
+    background-image: url(/src/pictures/Tokens/TokenArrow.png);
+    background-color: transparent;
+    background-size: 2.5vw;
+    background-repeat: no-repeat;
+    background-position: 0.5vw ;
+    margin-top: -2vw;
+    margin-right: 21vw;
+    margin-left: -25vw;
+    height: 3vw;
+    width: 4vw;
+    border-radius: 1vw;
+    border-color: black;
+    cursor: pointer;
+}
+
 .lvlButton {
     font-family: 'Birmingham'; 
     font-size: 2vw;
@@ -346,6 +423,57 @@
     cursor: pointer;
 }
 
+.backBoardButton {
+    background-image: url(/src/pictures/Tokens/TokenBackWhite.png);
+    background-color: transparent;
+    background-size: cover;
+    align-self: flex-end;
+    margin-left: -5.3vw;
+    margin-right: 2.3vw;
+    margin-bottom: 3.8vw;
+    border-radius: 50%;
+    border: 0.2vw solid rgb(44, 33, 140);
+    width: 3vw;
+    height: 3vw;
+    transition: all .3s ease; 
+    cursor: pointer;  
+    /* FADE IN ANIMATION */
+    opacity: 0;
+    animation: fadeInAnimation ease 3s;
+    animation-delay: 4s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.backBoardButton:hover {
+    transform: scale(1.1);
+}
+
+.surrenderButton {
+    background-image: url(/src/pictures/Tokens/TokenSurrender.png);
+    background-color: transparent;
+    background-size: cover;
+    align-self: flex-end;
+    margin-left: 3.5vw;
+    margin-bottom: 3.8vw;
+    border-radius: 50%;
+    border: 0.2vw solid rgb(44, 33, 140);
+    width: 3vw;
+    height: 3vw;
+    transition: all .3s ease; 
+    cursor: pointer;  
+    /* FADE IN ANIMATION */
+    opacity: 0;
+    animation: fadeInAnimation ease 3s;
+    animation-delay: 4s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.surrenderButton:hover {
+    transform: scale(1.1);
+}
+
 .victoryButton {
     font-family: 'Birmingham_Titling_Bold';
     font-size: 2.7vw;
@@ -365,4 +493,38 @@
     animation-delay: 3s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+}
+
+.defeatButton {
+    font-family: 'Birmingham_Titling_Bold';
+    font-size: 2.7vw;
+    color: white;
+    height: 10vw;
+    width: 20vw;
+    margin: 2vw;
+    margin-top: 10vw;
+    background-color: transparent;
+    border-radius: 1vw;
+    border-color: white;
+    align-self: center;
+    cursor: pointer;
+    /* FADE IN ANIMATION */
+    opacity: 0;
+    animation: fadeInAnimation ease 7s;
+    animation-delay: 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+.defeatChoiceButton {
+    width: 7vw;
+    height: 7vw;
+    font-family: 'Birmingham'; 
+    font-size: 3vw;
+    text-align: center;
+    background-color: rgb(213, 213, 160);
+    border: 1px solid #000000;
+    border-radius: 30%;
+    margin: 1.4vw;
+    cursor: pointer;
 }
