Fixed Victory page

--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -272,7 +272,7 @@
     margin-bottom: 0.1vw;
 }
 
-.victoryDefeatText {
+.victoryText {
     font-family: 'Birmingham_Bold';
     font-size: 7vw;
     color: white;
