Loading page check

--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -1,3 +1,10 @@
+/* LOADER */
+
+.loader:empty {
+    background-image: url(../pictures/Main/CthuluGif.gif);
+    background-size: cover;
+}
+
 /* FONTS  */
 
 @font-face {
