Loading page check

--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -1,7 +1,7 @@
 /* LOADER */
 
 .loader:empty {
-    background-image: url(../pictures/Main/CthuluGif.gif);
+    background-image: url(../pictures/Main/Eldritch_Horror_Cover.png);
     background-size: cover;
 }
 
