Loading page check

--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -1,6 +1,6 @@
 /* LOADER */
 
-.loader:empty {
+.loader {
     background-image: url(../pictures/Main/Eldritch_Horror_Cover.png);
     background-size: cover;
 }
