Loading page check

--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -1,9 +1,9 @@
 /* LOADER */
 
-.loader {
+/* .loader {
     background-image: url(../pictures/Main/Eldritch_Horror_Cover.png);
     background-size: cover;
-}
+} */
 
 /* FONTS  */
 
