--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -1,9 +1,22 @@
 /* LOADER */
 
-/* .loader {
-    background-image: url(../pictures/Main/Eldritch_Horror_Cover.png);
-    background-size: cover;
-} */
+.loader {
+    height: 100vh;
+    width: 100vw;
+    background-image: url(../pictures/Main/CthuluGif.gif);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    text-align: center;
+}
+
+.loadingText {
+    padding-top: 60vh;
+    margin-top: 0;
+    font-family: 'Birmingham';
+    font-size: 10vh;
+    color: rgb(0, 0, 0);
+}
 
 /* FONTS  */
 
@@ -247,18 +260,7 @@
 }
 
 /* TEXT  */
-.loadingText {
-    margin-top: 5vw;
-    font-family: 'Birmingham';
-    font-size: 5vw;
-    color: white;
-    justify-content: center;
-         /* FADE IN ANIMATION */
-    opacity: 0;
-    animation: fadeInAnimation ease 7s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-}
+
 .mainTitle {
     margin: 1vw;
     font-family: 'Birmingham_Titling_Bold';
