--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -13,7 +13,7 @@
 .loadingText {
     padding-top: 60vh;
     margin-top: 0;
-    font-family: 'Birmingham';
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 10vh;
     color: rgb(0, 0, 0);
 }
