--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -1,6 +1,22 @@
 /* LOADER */
 
+/* .loader {
+    height: 100vh;
+    width: 100vw;
+    background-image: url(../pictures/Main/CthuluGif.gif);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    text-align: center;
+}
 
+.loadingText {
+    padding-top: 60vh;
+    margin-top: 0;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 10vh;
+    color: rgb(0, 0, 0);
+} */
 
 /* FONTS  */
 
