--- a/src/pages/AllPages.css
+++ b/src/pages/AllPages.css
@@ -1,23 +1,3 @@
-/* LOADER */
-
-/* .loader {
-    height: 100vh;
-    width: 100vw;
-    background-image: url(../pictures/Main/CthuluGif.gif);
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    text-align: center;
-}
-
-.loadingText {
-    padding-top: 60vh;
-    margin-top: 0;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 10vh;
-    color: rgb(0, 0, 0);
-} */
-
 /* FONTS  */
 
 @font-face {
@@ -516,7 +496,7 @@
 }
 
 .defeatButton {
-    /* font-family: 'Birmingham_Titling_Bold'; */
+    font-family: 'Birmingham_Titling_Bold';
     font-size: 2.7vw;
     color: white;
     height: 10vw;
